# Push_swap

./: CMakeLists.txt  Makefile
checker.dSYM/Contents/Resources/DWARF/: checker
includes/: operation_list.h  parse.h  push_swap.h  sort_utils.h  stack.h  stack_insertion_sort.h  stack_insertion_sort_utils.h  stack_sort.h  stack_sort3.h  stack_split.h  two_stacks.h  two_stacks_operation.h  utils.h  vector.h
libft/: Makefile  ft_atoi.c  ft_count.c  ft_strsplit.c  get_next_line.h  libft.h
libft/includes/: get_next_line.h  libft.h
sources/: checker.c  insertion_sort.c  operation_list.c  parse.c  push_swap.c  sort_utils.c  stack1.c  stack2.c  stack_insertion_sort_utils1.c  stack_insertion_sort_utils2.c  stack_sort.c  stack_sort3.c  stack_split.c  two_stacks_1.c  two_stacks_2.c  two_stacks_3.c  two_stacks_4.c  utils1.c  utils2.c  utils3.c  vector.c
srcs/: algoritm.c  checker.c  ft_checker.c  ft_command.c  ft_ps.c  ft_sotr.c  push_swap.c  support.c  support2.c  support3.c  use_command.c
