cmake_minimum_required(VERSION 3.16)
project(check C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/includes)

add_executable(check
        includes/operation_list.h
        includes/parse.h
        includes/sort_utils.h
        includes/stack.h
        includes/stack_insertion_sort.h
        includes/stack_insertion_sort_utils.h
        includes/stack_sort.h
        includes/stack_sort3.h
        includes/stack_split.h
        includes/two_stacks.h
        includes/two_stacks_operation.h
        includes/utils.h
        includes/vector.h
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/sources/ft_atoi.c
        libft/sources/ft_bzero.c
        libft/sources/ft_count.c
        libft/sources/ft_free_arr.c
        libft/sources/ft_isalnum.c
        libft/sources/ft_isalpha.c
        libft/sources/ft_isascii.c
        libft/sources/ft_isdigit.c
        libft/sources/ft_islower.c
        libft/sources/ft_isprint.c
        libft/sources/ft_isspace.c
        libft/sources/ft_isupper.c
        libft/sources/ft_itoa.c
        libft/sources/ft_lstadd.c
        libft/sources/ft_lstdel.c
        libft/sources/ft_lstdelone.c
        libft/sources/ft_lstiter.c
        libft/sources/ft_lstmap.c
        libft/sources/ft_lstnew.c
        libft/sources/ft_memalloc.c
        libft/sources/ft_memccpy.c
        libft/sources/ft_memchr.c
        libft/sources/ft_memcmp.c
        libft/sources/ft_memcpy.c
        libft/sources/ft_memdel.c
        libft/sources/ft_memmove.c
        libft/sources/ft_memset.c
        libft/sources/ft_putchar.c
        libft/sources/ft_putchar_fd.c
        libft/sources/ft_putendl.c
        libft/sources/ft_putendl_fd.c
        libft/sources/ft_putnbr.c
        libft/sources/ft_putnbr_fd.c
        libft/sources/ft_putstr.c
        libft/sources/ft_putstr_fd.c
        libft/sources/ft_strcat.c
        libft/sources/ft_strchr.c
        libft/sources/ft_strclr.c
        libft/sources/ft_strcmp.c
        libft/sources/ft_strcpy.c
        libft/sources/ft_strdel.c
        libft/sources/ft_strdup.c
        libft/sources/ft_strequ.c
        libft/sources/ft_striter.c
        libft/sources/ft_striteri.c
        libft/sources/ft_strjoin.c
        libft/sources/ft_strlcat.c
        libft/sources/ft_strlen.c
        libft/sources/ft_strmap.c
        libft/sources/ft_strmapi.c
        libft/sources/ft_strncat.c
        libft/sources/ft_strncmp.c
        libft/sources/ft_strncpy.c
        libft/sources/ft_strnequ.c
        libft/sources/ft_strnew.c
        libft/sources/ft_strnstr.c
        libft/sources/ft_strrchr.c
        libft/sources/ft_strsplit.c
        libft/sources/ft_strstr.c
        libft/sources/ft_strsub.c
        libft/sources/ft_strtrim.c
        libft/sources/ft_tolower.c
        libft/sources/ft_toupper.c
        libft/sources/get_next_line.c
#        sources/checker.c
        sources/insertion_sort.c
        sources/operation_list.c
        sources/parse.c
        sources/push_swap.c
        sources/sort_utils.c
        sources/stack1.c
        sources/stack2.c
        sources/stack_insertion_sort_utils1.c
        sources/stack_insertion_sort_utils2.c
        sources/stack_sort.c
        sources/stack_sort3.c
        sources/stack_split.c
        sources/two_stacks_1.c
        sources/two_stacks_2.c
        sources/two_stacks_3.c
        sources/two_stacks_4.c
        sources/utils1.c
        sources/utils2.c
        sources/utils3.c
        sources/vector.c)
